<resources>
    <string name="app_name">Comics</string>
    <string name="title_activity_library">LibraryActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="breadcrumbs_header">Hierarchy</string>

    <!-- ApiErrors region -->

    <string name="all_error_title">Error</string>
    <string name="all_unhandled_error_description">There was an error. Please, try again later</string>
    <string name="all_email_in_use_error_description">This email in use. Please, choose another one or authorize with credentials</string>
    <string name="all_unauthorized_error_description">You dont authorize to made such a request.</string>
    <string name="all_email_not_confirmed_error_description">Your email address not confirmed. Please, confirm it use the link from post.</string>
    <string name="all_error_ok">OK</string>

    <!-- Endregion -->

    <!-- Reader region -->
    <string name="action_view_mode">View Mode</string>
    <string-array name="action_view_mode_variants">
        <item name="action_view_mode_aspect_fill">Aspect Fill</item>
        <item name="action_view_mode_aspect_fit">Aspect Fit</item>
        <item name="action_view_mode_fit_width">Fit Width</item>
    </string-array>

    <string name="action_reading_mode">Reading Mode</string>
    <string-array name="action_reading_mode_variants">
        <item name="action_reading_mode_left_to_right">Comics</item>
        <item name="action_reading_mode_right_to_left">Manga</item>
    </string-array>

    <string name="ok">OK</string>
    <!-- Endregion -->

    <!-- Navigation Drawer region -->
    <string name="navigation_header_comics_user">Comics user</string>
    <string name="navigation_header_sign_in">Sign in</string>
    <string name="navigation_header_comics_copyright">Comics, 2017 &#169;</string>
    <string name="navigation_drawer_local">Local library</string>
    <string name="navigation_drawer_local_on_disk">Open file on disk</string>
    <string name="navigation_drawer_common">Common</string>
    <string name="navigation_drawer_site_name">Easy Comics</string>
    <string name="navigation_drawer_store">Store</string>
    <string name="navigation_drawer_user_logout">Logout</string>
    <!-- Endregion -->
    
    <!-- Registration/Authorization region -->
    <string name="authorization_hint_email">Email</string>
    <string name="authorization_hint_password">Password</string>
    <string name="authorization_hint_confirm_password">Confirm password</string>
    <string name="authorization_no_account">No account yet? Create one</string>
    <string name="authorization_sign_in">Sign in</string>
    <string name="authorization_sign_up">Sign up</string>
    <!-- Endregion -->

    <!-- Comics Scheme region -->
    <string name="comics_scheme_buy_placeholder">Buy</string>
    <string name="comics_scheme_buy">Buy %1$s</string>
    <!-- Endregion -->
</resources>
