<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <item android:title="@string/navigation_drawer_local">
        <menu>
            <item
                android:id="@+id/nav_open_file_on_disk"
                android:icon="@drawable/ic_folder_black_24dp"
                android:title="@string/navigation_drawer_local_on_disk" />
        </menu>
    </item>

    <item android:title="@string/navigation_drawer_common">
        <menu>
            <item
                android:id="@+id/nav_user_logout"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/navigation_drawer_user_logout" />
        </menu>
    </item>

</menu>
